Closed
Bug 1568655
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::image::ImageCacheKey::GetTopLevelBaseDomain]
Categories
(Core :: Graphics: ImageLib, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | fixed |
| firefox70 | --- | fixed |
People
(Reporter: philipp, Assigned: tnikkel)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-14e59a1d-c5a8-4742-b2ff-7eab20190724.
Top 10 frames of crashing thread:
0 xul.dll static class nsTString<char> mozilla::image::ImageCacheKey::GetTopLevelBaseDomain image/ImageCacheKey.cpp:197
1 xul.dll mozilla::image::ImageCacheKey::ImageCacheKey image/ImageCacheKey.cpp:50
2 xul.dll imgLoader::LoadImage image/imgLoader.cpp:2152
3 xul.dll nsContentUtils::LoadImage dom/base/nsContentUtils.cpp:3381
4 xul.dll mozilla::css::ImageLoader::LoadImage layout/style/ImageLoader.cpp:458
5 xul.dll class imgRequestProxy* mozilla::StyleComputedUrl::LoadImage layout/style/nsStyleStruct.cpp:145
6 xul.dll nsStyleImageRequest::Resolve layout/style/nsStyleStruct.cpp:1668
7 xul.dll nsFrame::DidSetComputedStyle layout/generic/nsFrame.cpp:1156
8 xul.dll nsFrame::Init layout/generic/nsFrame.cpp:739
9 xul.dll void nsCSSFrameConstructor::InitAndRestoreFrame layout/base/nsCSSFrameConstructor.cpp:4684
this content crash signature is newly showing up (in low volume) during the firefox 69 cycle.
| Assignee | ||
Comment 1•6 years ago
|
||
Every other call to this function in the tree null checks the return value.
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → tnikkel
| Assignee | ||
Updated•6 years ago
|
Priority: -- → P3
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1291d07b86ac
Handle null return value from nsGlobalWindowInner::GetScriptableTop in ImageCacheKey::GetTopLevelBaseDomain. r=aosmond
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Comment 4•6 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Flags: needinfo?(tnikkel)
| Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 9080444 [details]
Bug 1568655. Handle null return value from nsGlobalWindowInner::GetScriptableTop in ImageCacheKey::GetTopLevelBaseDomain. r?aosmond
Beta/Release Uplift Approval Request
- User impact if declined: crashes sometimes
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): simple nullcheck, we crash in this case otherwise
- String changes made/needed: none
Flags: needinfo?(tnikkel)
Attachment #9080444 -
Flags: approval-mozilla-beta?
Comment 6•6 years ago
|
||
Comment on attachment 9080444 [details]
Bug 1568655. Handle null return value from nsGlobalWindowInner::GetScriptableTop in ImageCacheKey::GetTopLevelBaseDomain. r?aosmond
Crash fix, approved for 69.0b9.
Attachment #9080444 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•6 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•