Bug 1568655. Handle null return value from nsGlobalWindowInner::GetScriptableTop in ImageCacheKey::GetTopLevelBaseDomain. r=aosmond

Every other call to this function in the tree null checks the return value.

Differential Revision: https://phabricator.services.mozilla.com/D39243

--HG--
extra : moz-landing-system : lando